feat: optimize stocks search with ts_vector

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,7 @@
 #
 default: &default
   adapter: postgresql
+  version: 12.1
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
