--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,11 @@ development:
   database: tyrion_development
   host: localhost
 
+test:
+  <<: *default
+  database: tyrion_development
+  host: localhost
+
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
